fix: Button alignment

--- a/src/app/room/room.component.scss
+++ b/src/app/room/room.component.scss
@@ -108,7 +108,7 @@
   @media screen and (max-width: 500px) {
     h2 {
       flex-direction: column;
-      align-items: flex-end;
+      align-items: flex-start;
     }
   }
 
